# postcode-validator-uk

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml
postcode_validator_uk/: __init__.py  constants.py  exceptions.py  rules.py  validators.py
tests/: conftest.py  factories.py  test_rules.py  test_validators.py
uk-postcode-validator/: __init__.py
uk_postcode_validator/: decorators.py  exceptions.py  validators.py
